[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.9.0"
ed25519-dalek = "2.1.1"
tonic = "0.13.0"
prost = "0.13"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
bincode = "2.0.1"

[build-dependencies]
tonic-build = "0.13.0"
