[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
hex = "0.4.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
erased-serde = "0.4.6"
typetag = "0.2.20"
rand = "0.9.0"
log = "0.4.27"
flexi_logger = "0.30.1"
ed25519-dalek = "2.1.1"
tonic = "0.13.0"
prost = "0.13"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
bincode = {version= "2.0.1", features = ["serde"]}

[build-dependencies]
tonic-build = "0.13.0"
